selfhost/test/typechecker/array/error_type_mismatch_item.1.out
Error at %FILE_NAME%:1:5
Type mismatch
  |  [1, "2", 3]
         ^
Expected: Int
but instead found: String
